added favicon, improved design

--- a/code/index.html
+++ b/code/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Woof</title>
+  <link rel="shortcut icon" href="image/favicon.ico" />
   <link rel="stylesheet" type="text/CSS" href="./style.css" />
 </head>
 
@@ -13,7 +14,7 @@
   <header>
     <div class="logo">
       <a href="#">
-        <img src="https://cdn.pixabay.com/photo/2015/07/09/19/32/dog-838281_1280.jpg">
+        <img src="https://cdn.pixabay.com/photo/2015/07/09/19/32/dog-838281_1280.jpg" alt="Old dog and human" />
       </a>
     </div>
 
@@ -28,7 +29,6 @@
         <li><a href="#Contact" title="Click here for contact">Contact</a></li>
       </ul>
     </nav>
-
   </header>
 
   <main>
@@ -36,7 +36,7 @@
       <div class="big-news-image">
         <a href="#">
           <img src="https://cdn.pixabay.com/photo/2017/12/27/14/02/friends-3042751_1280.jpg"
-            alt="Dog and human in nature" class="photo">
+            alt="Dog and human in nature" class="photo" />
         </a>
       </div>
       <div class="big-news-textbox">
@@ -47,9 +47,9 @@
             dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
             commodo
-            consequat.<br><br>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut</p>
+            consequat.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut.</p>
         </a>
       </div>
     </section>
@@ -61,7 +61,8 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua. </p>
-          <img src="https://cdn.pixabay.com/photo/2013/10/02/23/03/dog-190056_1280.jpg" class="photo">
+          <img src="https://cdn.pixabay.com/photo/2013/10/02/23/03/dog-190056_1280.jpg" alt="Dog hiking in nature"
+            class="photo" />
         </a>
       </div>
 
@@ -69,9 +70,9 @@
         <a href="#">
           <h3>Lovely sleep</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. </p>
-          <img src="https://cdn.pixabay.com/photo/2016/02/26/16/32/bulldog-1224267_1280.jpg" class="photo">
+            dolore magna aliqua. </p>
+          <img src="https://cdn.pixabay.com/photo/2016/02/26/16/32/bulldog-1224267_1280.jpg" alt="Dog sleeping"
+            class="photo" />
         </a>
       </div>
 
@@ -81,7 +82,8 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua. </p>
-          <img src="https://cdn.pixabay.com/photo/2017/09/21/09/33/dog-2771274_1280.jpg" class="photo">
+          <img src="https://cdn.pixabay.com/photo/2017/09/21/09/33/dog-2771274_1280.jpg" alt="Dog eating"
+            class="photo" />
         </a>
       </div>
 
@@ -91,7 +93,8 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua. </p>
-          <img src="https://cdn.pixabay.com/photo/2016/08/01/13/13/dog-1561011_1280.jpg" class="photo">
+          <img src="https://cdn.pixabay.com/photo/2016/08/01/13/13/dog-1561011_1280.jpg" alt="Dog playing with toy"
+            class="photo" />
         </a>
       </div>
 
@@ -102,7 +105,7 @@
             dolore
             magna aliqua. </p>
           <img src="https://cdn.pixabay.com/photo/2015/05/28/15/24/malinois-and-border-collie-788032_1280.jpg"
-            class="photo">
+            alt="Dog with dog-friends" class="photo" />
         </a>
       </div>
 
@@ -112,7 +115,8 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua. </p>
-          <img src="https://cdn.pixabay.com/photo/2022/06/20/16/51/dog-7274203_1280.jpg" class="photo">
+          <img src="https://cdn.pixabay.com/photo/2022/06/20/16/51/dog-7274203_1280.jpg" alt="Dog taking a bath"
+            class="photo" />
         </a>
       </div>
 
@@ -122,7 +126,8 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua. </p>
-          <img src="https://cdn.pixabay.com/photo/2017/11/27/22/52/dog-2982426_1280.jpg" class="photo">
+          <img src="https://cdn.pixabay.com/photo/2017/11/27/22/52/dog-2982426_1280.jpg" alt="Dog drinking water"
+            class="photo" />
         </a>
       </div>
 
@@ -132,14 +137,15 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua. </p>
-          <img src="https://cdn.pixabay.com/photo/2022/06/12/15/20/golden-retriever-7258225_1280.jpg" class="photo">
+          <img src="https://cdn.pixabay.com/photo/2022/06/12/15/20/golden-retriever-7258225_1280.jpg"
+            alt="Dog running in water" class="photo" />
         </a>
       </div>
     </section>
   </main>
 
   <footer>
-    <p>Woof! Dogs, Just wanna have fun. All rights reserved. These news are written for dogs.</p>
+    <p>Woof! Dogs just wanna have fun. All rights reserved. These news are written for dogs.</p>
   </footer>
 
 </body>
