Added favicon, hover effect

--- a/code/index.html
+++ b/code/index.html
@@ -7,6 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Woof</title>
   <link rel="shortcut icon" href="image/favicon.ico" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/CSS" href="./style.css" />
 </head>
 
@@ -14,12 +17,12 @@
   <header>
     <div class="logo">
       <a href="#">
-        <img src="https://cdn.pixabay.com/photo/2015/07/09/19/32/dog-838281_1280.jpg" alt="Old dog and human" />
+        <img src="https://cdn.pixabay.com/photo/2015/07/09/19/32/dog-838281_1280.jpg" alt="Logo dog" />
       </a>
     </div>
 
     <div class="header-text">
-      <h1>Woof!</h1>
+      <h1>Woof.</h1>
     </div>
 
     <nav>
@@ -41,7 +44,7 @@
       </div>
       <div class="big-news-textbox">
         <a href="#">
-          <h2>Oldest dog alive</h2>
+          <h2><span class="underline-on-hover">Oldest dog alive</span></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et
             dolore
