--- a/code/index.html
+++ b/code/index.html
@@ -16,7 +16,7 @@
   <header class="navbar">
     <div class="logo">
       <h1>
-        <img src="/images/villa-vibes-logo-white.svg" alt="The Villa Vibes Logo">
+        <img id="to-logo" src="/images/villa-vibes-logo-white.svg" alt="The Villa Vibes Logo">
       </h1>
     </div>
     <nav class="links">
@@ -45,13 +45,20 @@
         <img class="article-image-large" src="/images/garden-image.jpg" alt="Image of someone watering a plant">
       </div>
       <div>
+        <h5 class="genre">Landscaping</h5>
         <h3>Nature's Enchanted Haven Unveiled: Majestic Landscaping Transformation
         </h3>
+        <h5 class="date">July 12 2023</h5>
         <p>
           Prepare to be mesmerized by the breathtaking results of a transformative landscaping project. Majestic trees,
           vibrant blooms, and sparkling fountains create a serene oasis. Explore hidden treasures and a dedicated
-          children's play area. Step into a realm of natural splendor and embrace the enchantment.</p>
-        <button src="#" class="btn">Read all about it</button>
+          children's play area. Step into a realm of natural splendor and embrace the enchantment.
+        </p>
+        <p>Amidst the lush foliage, intricately crafted sculptures emerge as if woven by nature's own hand. Marble
+          statues of mythical creatures and ethereal nymphs appear to come to life, their graceful forms frozen in
+          eternal poses, adding an aura of mystique to the surroundings.
+        </p>
+        <button href="#" class="btn">Read all about it</button>
       </div>
     </article>
   </section>
@@ -63,34 +70,35 @@
     </div>
     <article class="recent-articles">
       <div>
-        <a href="#">
-          <img class="article-image-small" src="/images/gardener.jpg" alt="Image of a gardener">
-        </a>
+        <img href="#" class="article-image-small" src="/images/gardener.jpg" alt="Image of a gardener">
         <div>
+          <h5 class="genre">Garden</h5>
           <h4>Plant Heist: Renowned Gardener's Prized Collection Vanished
           </h4>
+          <h5 class="date">July 12 2023</h5>
         </div>
       </div>
       <div>
-        <a href="#">
-          <img class="article-image-small" src="/images/fire.jpg" alt="Image of a fire">
-        </a>
+        <img href="#" class="article-image-small" src="/images/fire.jpg" alt="Image of a fire">
+        <h5 class="genre">Garden</h5>
         <h4>Garden Inferno: Iconic Villa Paradise Reduced to Ashes!
         </h4>
+        <h5 class="date">July 11 2023</h5>
       </div>
       <div>
-        <a href="#">
-          <img class="article-image-small" src="/images/underground.jpg" alt="Image of people digging in the ground">
-        </a>
+        <img href="#" class="article-image-small" src="/images/underground.jpg"
+          alt="Image of people digging in the ground">
+        <h5 class="genre">Renovations</h5>
         <h4>Hidden Oasis Unveiled: Astonishing Discovery Beneath Famous Villa!
         </h4>
+        <h5 class="date">July 11 2023</h5>
       </div>
       <div>
-        <a href="#">
-          <img class="article-image-small" src="/images/reno.jpg" alt="Image of an ongoing renovation">
-        </a>
+        <img href="#" class="article-image-small" src="/images/reno.jpg" alt="Image of an ongoing renovation">
+        <h5 class="genre">Renovations</h5>
         <h4>Villa's Renovation Reveals Fascinating Stories from the Past!
         </h4>
+        <h5 class="date">July 10 2023</h5>
       </div>
     </article>
   </section>
@@ -106,12 +114,14 @@
           <img class="article-image-large" src="/images/retreat.jpg" alt="Image of a garden retreat">
         </div>
         <div>
+          <h5 class="genre">Landscaping</h5>
           <h3>A Yard Transformed into a Stunning Garden Retreat
           </h3>
+          <h5 class="date">July 6 2023</h5>
           <p>
             In Willowdale, a neglected yard has undergone a remarkable transformation, becoming a breathtaking garden
             oasis thanks to the passion and vision of local landscapers, Jane and Mark Anderson.</p>
-          <button src="#" class="btn">Read all about it</button>
+          <button href="#" class="btn">Read all about it</button>
         </div>
       </div>
       <div class="most-read-item">
@@ -119,20 +129,22 @@
           <img class="article-image-large" src="/images/furniture.jpg" alt="Image of furniture in a livingroom">
         </div>
         <div>
+          <h5 class="genre">Interior Design</h5>
           <h3>Exploring Interior Design Trends: From Vibrant Colors to Innovative Furniture
           </h3>
+          <h5 class="date">July 5 2023</h5>
           <p>
             Villa Vibes takes a closer look at the latest trends in interior design, from bold color palettes to
             innovative furniture designs that are revolutionizing home decor.</p>
-          <button src="#" class="btn">Read all about it</button>
+          <button href="#" class="btn">Read all about it</button>
         </div>
       </div>
     </article>
   </section>
 
-  <section class="">
-    <!-- The other news  -->
-  </section>
+  <footer class="footer">
+    <a href="#to-logo"><img src="/images/villa-vibes-nohouse.svg" alt="Villa Vibes logo"></a>
+  </footer>
 </body>
 
 </html>
