--- a/code/index.html
+++ b/code/index.html
@@ -74,9 +74,17 @@
     </header>
 
     <main>
+      <div class="sign sign-first">
+        <span class="fast-flicker">B</span>erl<span class="flicker">i</span>n
+      </div>
       <section class="big-news">
         <div class="about-container about-first-box">
           <h2>Hallo, Berlin.</h2>
+          <h3>History</h3>
+          <div class="sign sign-second">
+            <span class="fast-flicker">B</span>erl<span class="flicker">i</span
+            >n
+          </div>
           <div class="about-inner inner-left">
             <img
               src="./images/berlinwall.webp"
@@ -85,31 +93,31 @@
             />
 
             <p class="about-text">
-              Berlin was the capital of Prussia and then, from 1871, of a
-              unified Germany. Though partitioned into East and West Berlin
-              after World War II, the reunification of East and West Germany led
-              to Berlin's reinstatement as the all-German capital in 1990.
+              Founded in the 13th century, Berlin has had an eventful history.
+              <a href="https://www.berlin.de/berlin-im-ueberblick/en/history/"
+                >Read more</a
+              >
             </p>
           </div>
         </div>
 
         <div class="about-container about-second-box">
           <h2>Summer in Berlin: The ultimate guide</h2>
-          <a
-            href="https://www.exberliner.com/berlin/things-to-do-summer-museums-parks-tips/"
-          >
-            <div class="about-inner inner-right">
-              <p class="about-text">
-                Summer in Berlin can be truly special, but are our favourite
-                things to do? We round up the best museums, lakes, bars and
-                hidden tips.
-              </p>
-              <img src="./images/summer.webp" alt="Berlin wall image" />
-            </div>
-          </a>
+          <h3>TODOs</h3>
+          <div class="about-inner inner-right">
+            <p class="about-text">
+              Summer in Berlin can be truly special,and weround up the best
+              museums, lakes, bars and hidden tips.
+              <a
+                href="https://www.exberliner.com/berlin/things-to-do-summer-museums-parks-tips/"
+                >Read More</a
+              >
+            </p>
+            <img src="./images/summer.webp" alt="Berlin wall image" />
+          </div>
         </div>
       </section>
-
+      <h2 class="news-heading">Berlin News</h2>
       <section class="grid">
         <div class="grid-child">
           <a
