--- a/index.html
+++ b/index.html
@@ -51,5 +51,10 @@
             </div>
         </section>
     </div>
+    <div>  
+        <footer>
+        <p>Author: Poppy Rose<br>
+        <a href="mailto:poppy@roses.com">E- mail Poppy</a></p>
+      </footer></div>
 </body>
 </html>
