--- a/code/index.html
+++ b/code/index.html
@@ -118,7 +118,31 @@
         </div>
       </section>
       <h2 class="news-heading">Berlin News</h2>
-      <section class="grid">
+      <div class="frame">
+        <div class="text">
+          <span>L</span>
+          <span>O</span>
+          <span>V</span>
+          <span>E</span>
+          <span></span>
+          <span>B</span>
+          <span>E</span>
+          <span>R</span>
+          <span>L</span>
+          <span>I</span>
+          <span>N</span>
+          <span>❤</span>
+          <span>B</span>
+          <span>E</span>
+          <span>R</span>
+          <span>L</span>
+          <span>I</span>
+          <span>N</span>
+          <span>❤</span>
+        </div>
+     
+      <section class="grid ">
+       
         <div class="grid-child">
           <a
             href="https://www.berliner-zeitung.de/en/dont-call-her-mutti-li.183110"
@@ -257,8 +281,10 @@
             <h2>Flashes of Memory: Photography During the Holocaust</h2>
           </a>
         </div>
+      </div>
       </section>
     </main>
+
     <footer>Created by Sakura Tanaka</footer>
   </body>
 </html>
