--- a/code/index.html
+++ b/code/index.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Cherry+Cream+Soda&family=Roboto:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
