--- a/code/index.html
+++ b/code/index.html
@@ -10,6 +10,17 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <h1 class="site-title">GameNews</h1>
+      <nav class="site-nav">
+        <ul class="nav-menu">
+          <li class="nav-menu-items trending">Trending:</li>
+          <li class="nav-menu-items"><a> Baldurs Gate III </a></li>
+          <li class="nav-menu-items"><a> Diablo IV </a></li>
+          <li class="nav-menu-items"><a> Starfield </a></li>
+          <li class="nav-menu-items"><a> Final Fantasy XVI </a></li>
+          <li class="nav-menu-items"><a> Zelda: Tears of the Kingdom </a></li>
+        </ul>
+      </nav>
     </header>
 
     <section class="big-news">
