--- a/code/index.html
+++ b/code/index.html
@@ -121,10 +121,10 @@
       <h2 class="news-heading">Berlin News</h2>
       <div class="frame">
         <div class="text">
-          <span>L</span>
-          <span>O</span>
-          <span>V</span>
-          <span>E</span>
+          <span></span>
+          <span>I</span>
+          <span></span>
+          <span>❤</span>
           <span></span>
           <span>B</span>
           <span>E</span>
@@ -132,14 +132,17 @@
           <span>L</span>
           <span>I</span>
           <span>N</span>
+          <span></span>
           <span>❤</span>
+          <span></span>
           <span>B</span>
           <span>E</span>
           <span>R</span>
           <span>L</span>
           <span>I</span>
           <span>N</span>
-          <span>❤</span>
+          <span></span>
+  
         </div>
      
       <section class="grid ">
