added images and metatag

--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1,0">
+  <meta http-equiv="X-UA-Compatible" content="ie-edge">
+  <!-- Change the title below -->
+  <title>Sail life magazine</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+  <header>
+    <img src="saillife.PNG" alt="logo">
+    <h1>Sail Life magazine</h1>
+    <a href="http://www.google.com">Podcasts</a>
+    <a href="./links.html">Contakt</a>
+    <a href="./links.html">Links</a>
+    <!-- Some kind of logo and navbar -->
+  </header>
+
+  <section class="big-news">
+    <!-- The big news content -->
+    <img src="segelbåtar.jpeg" alt="sailing boats.">
+    <h2>Gotland runt 2023</h2>
+    <p>This year we had as much as over 300 participants in gotland runt offshore race. This years race had strong winds
+      and really put all the boats to test, over 150 boats quit the race before crossing the baltic sea</p>
+  </section>
+
+  <section class="small news1">
+    <img src="rutt.jpeg" alt="map of racetrack">
+    <h2>Classics boats in the race.</h2>
+    <p>New for this year ist that all the classic boats gets their own track, they dont have to round the island instead
+      they go out to alma grundet and set their course to Visnby where they turn around and head back to sandhamn.</p>
+    <!-- The other news  -->
+  </section>
+
+  <section class="small news2">
+    <img src="bojbojfårösund.jpeg" alt="">
+
+  </section>
+</body>
+
 </html>
