added img and sections

--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1,0">
-  <meta http-equiv="X-UA-Compatible" content="ie-edge">
   <!-- Change the title below -->
   <title>Sail life magazine</title>
   <link rel="stylesheet" href="./style.css" />
@@ -32,14 +31,47 @@
   <section class="small news1">
     <img src="rutt.jpeg" alt="map of racetrack">
     <h2>Classics boats in the race.</h2>
-    <p>New for this year ist that all the classic boats gets their own track, they dont have to round the island instead
-      they go out to alma grundet and set their course to Visnby where they turn around and head back to sandhamn.</p>
+    <p>New for this year is that all the classic boats gets their own track, they dont have to round the island instead
+      they go out to alma grundet and set their course to Visby where they turn around and head back to sandhamn.</p>
     <!-- The other news  -->
   </section>
 
   <section class="small news2">
-    <img src="bojbojfårösund.jpeg" alt="">
+    <img src="bojbojfårösund.jpeg" alt="sailboat with boroken mast">
+    <h2>Strong winds and damaged boats</h2>
+    <p>The gale force winds really put the boats to test. And a lot of boats got damaged, 2 boats broke their masts and
+      1 boat lost their rudder an had to be abandoned at sea. Boj boj who where in the lead broke their mast just
+      outside fårö and therefore had to quit the race.</p>
+  </section>
 
+  <section class="small news3">
+    <img src="pandion.jpeg" alt="boat drifting at sea">
+    <h2>Crew got recued at sea</h2>
+    <p>Team Pandion lost their rudder and in the string winds the situation got really dangerous so swedish coastguard
+      rescued the crew who unfortetly had to abandoned their boat. When the wind and sea conditions where better a
+      search team found Pandion drifting just outside estonia and she where towed back to stockholm. </p>
+  </section>
+
+  <section class="small news4">
+    <img src="Allegra.jpeg" alt="catamatan at sea">
+    <h2>Allegra wins her class</h2>
+    <p>The biggest catamaran in the race was the first boat to finish the race and she did that in style, 12 hours
+      before the rest of the fleet, she won her class.</p>
+  </section>
+
+  <section class="small news5">
+    <img src="wetjob.jpeg" alt="sailboat at sea">
+    <h2>Wet Job was really flying</h2>
+    <p>Team wet job has been sailing together for years and really know their boat well. Wet job had a blast in these
+      strong winds and when they rounded the southern part of gotland the boat really had all the winds she was built
+      for and where flying. </p>
+  </section>
+
+  </section class="small news6">
+  <img src="wetjob" alt="the winning sailboat">
+  <h2>The winner of the race</h2>
+  <p>This years overall winner is wetjob who even thou sha had some mishaps with an undfortiently jibe on her way home
+    wich cost her alot of valuable time managed to keep her lead all the way till the Finnish line. Good job Wetjob!</p>
   </section>
 </body>
 
