Done with the site

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,164 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>Celebrity News</title>
+  <link rel="stylesheet" href="./style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+
+<body>
+  <header>
+    <h1>CELEBRITY NEWS</h1>
+    <img src="logo.svg" alt="technigo-logo" class="resizable-image">
+  </header>
+
+  <div class="header-title">
+    <h2>The latest Celebrity News that YOU don't want to miss!</h2>
+    <ul>
+      <li><a href="#">HOME</a></li>
+      <li><a href="#">NEWS</a></li>
+      <li><a href="#">ABOUT US</a></li>
+      <li><a href="#">CONTACT</a></li>
+    </ul>
+  </div>
+
+
+
+
+  <main>
+    <article class="main-article">
+      <h4><a href="#" class="a-hover">Margot Robbie - a Barbie Girl in a... not so Barbie World?</a></h4>
+      <div class="image-container">
+        <img src="Margot.webp" alt="Margot Robbie on the Cover of Vouge.">
+        <img src="Margot2.jpeg" alt="Margot Robbie on the red carpet.">
+
+        <p class="special-font">Margot Robbie, the 33-year old four time winner Golden Globe Award actress sure is T H E
+          perfect actress to play Barbie. Her beauty, her smile, her talent fits perfect for the role but since this
+          project is not about writing real articles I will just fill this out with some gibberish. <br><br />
+          By now most of you have probably already stopped reading but if not I can tell you that summer is here (no
+          sh*t Sherlock) so dont forget to wear sunscreen! And if you are a man you have most definitely (a word I
+          always have to google how to spell) stopped reading by now so to all my girlies let me tall y'all a secret:
+          just kidding I have no secret to spare..
+          <br><br />
+          Anyway, Barbie Barbie Barbie. Can't wait to see it. Good premiere-date tho: july 21s AKA my biiirthday!
+
+        </p>
+      </div>
+
+    </article>
+
+    <div class="small-articles">
+
+      <article>
+        <div class="image-container">
+          <img src="Khloe.webp" alt="Khloe Kardashian" class="resizable-image-2 grayscale-effect">
+        </div>
+        <h3><a href="#" class="a-hover">Rumors has it; Khloe Kardashian is not a "real" Kardashian!</h3>
+        </a>
+        <p>Have you heard the rumor about Khloe Kardashians real father is not Robert Kardashion but a man named Alex
+          Rodan. Kris Jenner has admitted to cheating during her and Roberts marriage, which fules the fire of Alex
+          Rodan being Khloes real father.</p>
+
+      </article>
+
+      <article>
+
+        <div class="image-container">
+          <img src="Brit.jpeg" alt="Britney Spears" class="resizable-image-2 grayscale-effect">
+        </div>
+        <h3><a href="#" class="a-hover">
+            How's Britney REALLY doing? Find out here.
+          </a></h3>
+        <p>Anyone who's been on Britney Spears instagram can ask themself "How is she really doing?" and so do we. It's
+          hard to get a hold of Britney for a interview to acutally ask HER but according to rumors she is, lets say
+          both good and bad.</p>
+
+      </article>
+
+      <article>
+
+        <div class="image-container">
+          <img src="Influ.jpeg" alt="Influencer" class="resizable-image-2 grayscale-effect">
+        </div>
+        <h3><a href="#" class="a-hover">
+            Does influencers counts as celebritys?
+          </a></h3>
+        <p>Find out who are the worlds biggest influencers and what they influence on. We have asked people if they know
+          who these influencers are or not. Are they just famous online or are they actually famous in real life?</p>
+
+      </article>
+
+      <article>
+
+        <div class="image-container">
+          <img src="opp.jpg" alt="Cillian Murphy as Oppenheimer" class="resizable-image-2 grayscale-effect">
+        </div>
+        <h3><a href="#" class="a-hover">
+            Oppenheimer - another confusing movie by Christopher Nolan?
+          </a></h3>
+        <p>Christopher Nolan is the filmmaker of the new movie Oppenheimer. He is also the filmmaker of Inception and
+          Tenet - two very confusing movies. Is Oppenheimer another confusing one?</p>
+
+      </article>
+
+      <article>
+        <div class="image-container">
+          <img src="Ryan.webp" alt="Ryan Gosling" class="resizable-image-2 grayscale-effect">
+        </div>
+        <h3><a href="#" class="a-hover">Gosling on playing Ken: "I unleashed my inner Kenergy"</a></h3>
+        <p>We are pretty sure that Gosling was BORNED to play Ken! Who would fit better?? Dont answer that. He is the
+          perfect guy to play on male insecurities and toxic masculinity.</p>
+      </article>
+
+
+      <article>
+
+        <div class="image-container">
+          <img src="Gaga.webp" alt="Lady Gaga" class="resizable-image-2 grayscale-effect">
+        </div>
+        <h3><a href="#" class="a-hover">
+            Exclusive interview with the one and only Lady Gaga.
+          </a></h3>
+        <p>Lady Gaga reveals how it was to star with Adam Driver in "House of Gucci", why she love the gays, inspiration
+          for her new album and much more!</p>
+
+      </article>
+
+
+      <article>
+
+        <div class="image-container">
+          <img src="Olsen.jpg_large" alt="Elizabeth Olsen as Candy Montgomery"
+            class="resizable-image-2 grayscale-effect">
+        </div>
+        <h3><a href="#" class="a-hover">
+            Elizabeth Olsen about playing Candy Montgomery: "I would never judge a character"
+          </a></h3>
+        <p>HBO's series "Love & Death" starring Elizabeth Olsen as Candy Montgomery, the housewife who killed her lovers
+          wife.</p>
+
+      </article>
+
+      <article>
+
+        <div class="image-container">
+          <img src="Keen.webp" alt="Elisabeth Keeen" class="resizable-image-2 grayscale-effect">
+        </div>
+        <h3><a href="#" class="a-hover">
+            The new season of Blacklist - will Keen get kidnapped again?
+          </a></h3>
+        <p>In every season of Blacklist Elisabeth Keen gets kidnapped, which is strange if she is such a good FBI agent
+          she should know how to avoid those situations. So will she get kidnapped again?</p>
+
+      </article>
+
+    </div>
+  </main>
+
+</body>
+
 </html>
