--- a/code/index.html
+++ b/code/index.html
@@ -10,10 +10,12 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <!-- Just testing this out for now-->
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <p>Testing the git commit</p>
     </section>
 
     <section class="">
