--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>UTOPIA</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+
+<body>
+    <header class="navigation">
+        <div class="navigation-brand">
+            <img src="/img/globe.svg">
+            <a class="navigation-link navigation-title" href="/">UTOPIA</a>
+        </div>
+        <div class="navigation-links">
+            <a class="navigation-link" href="/">HOME</a>
+            <a class="navigation-link" href="/">CULTURE</a>
+            <a class="navigation-link" href="/">SPORTS</a>
+        </div>
     </header>
+</body>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
-
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
 </html>
