Change color & position of nav links when hovering

--- a/code/index.html
+++ b/code/index.html
@@ -11,13 +11,13 @@
 <body>
     <header class="navigation">
         <div class="navigation-brand">
-            <img src="/img/globe.svg">
+            <img src="/code/img/globe.svg">
             <a class="navigation-link navigation-title" href="/">UTOPIA</a>
         </div>
         <div class="navigation-links">
-            <a class="navigation-link" href="/">HOME</a>
-            <a class="navigation-link" href="/">CULTURE</a>
-            <a class="navigation-link" href="/">SPORTS</a>
+            <a class="navigation-link navigation-link-effect" href="/">HOME</a>
+            <a class="navigation-link navigation-link-effect" href="/">CULTURE</a>
+            <a class="navigation-link navigation-link-effect" href="/">SPORTS</a>
         </div>
     </header>
 </body>
