--- a/code/index.html
+++ b/code/index.html
@@ -14,6 +14,11 @@
             <img src="/code/img/globe.svg">
             <a class="navigation-link navigation-title" href="/">UTOPIA</a>
         </div>
+        <div class="navigation-hamburger">
+            <div class="hamburger-line"></div>
+            <div class="hamburger-line"></div>
+            <div class="hamburger-line"></div>
+        </div>
         <div class="navigation-links">
             <a class="navigation-link navigation-link-effect" href="/">HOME</a>
             <a class="navigation-link navigation-link-effect" href="/">CULTURE</a>
