changed misspelled words

--- a/code/index.html
+++ b/code/index.html
@@ -21,7 +21,7 @@
 
       <a href="#" class="nav-brand">
         <h1>BLACK AND WHITE NEWS</h1>
-        <p>The latest news on anything black and white</p>
+        <p>The latest news on all things black and white</p>
       </a>
 
       <ul class="nav-menu">
@@ -92,7 +92,7 @@
 
         <div class="box-text">
           <h1>Man hospitalised after zebra attack in Ohio</h1>
-          <p>Deputies told to "put zebra down of needed" after owner says he had his arm "bitten off".
+          <p>Deputies told to "put zebra down if needed" after owner says he had his arm "bitten off".
           </p>
         </div>
       </div>
@@ -132,7 +132,7 @@
 
         <div class="box-text">
           <h1>Man hospitalised after zebra attack in Ohio</h1>
-          <p>Deputies told to "put zebra down of needed" after owner says he had his arm "bitten off".
+          <p>Deputies told to "put zebra down if needed" after owner says he had his arm "bitten off".
           </p>
         </div>
       </div>
@@ -172,7 +172,7 @@
 
         <div class="box-text">
           <h1>Man hospitalised after zebra attack in Ohio</h1>
-          <p>Deputies told to "put zebra down of needed" after owner says he had his arm "bitten off".
+          <p>Deputies told to "put zebra down if needed" after owner says he had his arm "bitten off".
           </p>
         </div>
       </div>
@@ -212,7 +212,7 @@
 
         <div class="box-text">
           <h1>Man hospitalised after zebra attack in Ohio</h1>
-          <p>Deputies told to "put zebra down of needed" after owner says he had his arm "bitten off".
+          <p>Deputies told to "put zebra down if needed" after owner says he had his arm "bitten off".
           </p>
         </div>
       </div>
