Adding weather in navigation bar

--- a/code/index.html
+++ b/code/index.html
@@ -10,20 +10,25 @@
 
 <body>
     <header class="navigation">
+
         <div class="navigation-brand">
             <img src="/code/img/globe.svg">
             <a class="navigation-link navigation-title" href="/">UTOPIA</a>
         </div>
+
         <div class="navigation-hamburger">
             <div class="hamburger-line"></div>
             <div class="hamburger-line"></div>
             <div class="hamburger-line"></div>
         </div>
+
         <div class="navigation-links">
             <a class="navigation-link navigation-link-effect" href="/">HOME</a>
             <a class="navigation-link navigation-link-effect" href="/">CULTURE</a>
             <a class="navigation-link navigation-link-effect" href="/">SPORTS</a>
+            <a class="navigation-link navigation-link-effect" href="/">WEATHER</a>
         </div>
+
     </header>
 </body>
 
