Making navbar responsive for tablet and adding main in HTML

--- a/code/index.html
+++ b/code/index.html
@@ -11,10 +11,10 @@
 <body>
     <header class="navigation">
 
-        <div class="navigation-brand">
-            <img src="/code/img/globe.svg">
-            <a class="navigation-link navigation-title" href="/">UTOPIA</a>
-        </div>
+        <img class="navigation-brand" src="/code/img/globe.svg">
+        <a class="navigation-title" href="/">UTOPIA</a>
+
+        <div class="grow"></div>
 
         <div class="navigation-hamburger">
             <div class="hamburger-line"></div>
@@ -22,14 +22,22 @@
             <div class="hamburger-line"></div>
         </div>
 
-        <div class="navigation-links">
-            <a class="navigation-link navigation-link-effect" href="/">HOME</a>
-            <a class="navigation-link navigation-link-effect" href="/">CULTURE</a>
-            <a class="navigation-link navigation-link-effect" href="/">SPORTS</a>
-            <a class="navigation-link navigation-link-effect" href="/">WEATHER</a>
-        </div>
+        <a class="navigation-link first-link" href="/">HOME</a>
+        <a class="navigation-link second-link" href="/">CULTURE</a>
+        <a class="navigation-link" href="/">SPORTS</a>
+        <a class="navigation-link" href="/">WEATHER</a>
 
     </header>
+
+    <main>
+        <section>
+
+        </section>
+
+        <section>
+
+        </section>
+    </main>
 </body>
 
 </html>
