--- a/code/index.html
+++ b/code/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header class="navigation">
+    <header class="container navigation">
 
         <img class="navigation-brand" src="/code/img/globe.svg">
         <a class="navigation-title" href="/">UTOPIA</a>
